<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTimingActivity">

    <TextView
        android:id="@+id/textViewTimingEditStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constLayoutEditTimingSeperator" />

    <TextView
        android:id="@+id/textViewTimingEditEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetStartDateNow" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLayoutEditTimingSeperator"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimingEditTitle">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewTimingEditTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/buttonTextAllJobs"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSetStartDateNow"
        android:layout_width="155dp"
        android:layout_height="66dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightestgrey"
        android:text="@string/set_to_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimingEditStartDate" />

    <Button
        android:id="@+id/buttonSetEndDateNow"
        android:layout_width="155dp"
        android:layout_height="66dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightestgrey"
        android:text="@string/set_to_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimingEditEndDate" />

    <Button
        android:id="@+id/buttonSetStartDatePick"
        android:layout_width="155dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightestgrey"
        android:text="@string/pick_date"
        app:layout_constraintStart_toEndOf="@+id/buttonSetStartDateNow"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimingEditStartDate" />

    <Button
        android:id="@+id/buttonSetEndDatePick"
        android:layout_width="155dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightestgrey"
        android:text="@string/pick_date"
        app:layout_constraintStart_toEndOf="@+id/buttonSetEndDateNow"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimingEditEndDate" />
</androidx.constraintlayout.widget.ConstraintLayout>